[package]
name = "steam-status-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
clokwerk = "0.4.0"
console = "0.15.7"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
open = "5.0.0"
tray-icon = "0.9.0"
